[package]
name = "ocular"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hook_macro = { path = "./hook_macro" }
retour = "0.3.1"
tracing = "0.1.41"
windows = { version = "0.62.0", features = ["Win32_Graphics_Dxgi", "Win32_Graphics_Dxgi_Common", "Win32_Graphics_Direct3D11", "Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Direct3D"] }
